# pydantic-firestore

./: README.md  pyproject.toml  requirements.txt  scratch.ipynb
.github/workflows/: publish.yml
pydantic_firestore/: __init__.py  document.py  location.py  model.py  path.py  reference.py  snapshot.py  transforms.py  utils.py
tests/: test_reference.py
