[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "pydantic_firestore"
authors = [{ name = "Rostyslav Bohomaz", email = "rostyslav.db@gmail.com" }]
description = "Pydantic models for Firestore"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["firestore", "pydantic"]
license = { file = "LICENSE" }
classifiers = ["Programming Language :: Python :: 3"]
dynamic = ["version", "dependencies"]

[project.urls]
Repository = "https://github.com/rostyq/pydantic-firestore"

[tool.hatch.version]
path = "pydantic_firestore/__init__.py"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]
